--- a/GymScheduler.Commons.Tests/GymScheduler.Commons.Tests.csproj
+++ b/GymScheduler.Commons.Tests/GymScheduler.Commons.Tests.csproj
@@ -9,9 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GymScheduler\GymScheduler.csproj" />
+    <ProjectReference Include="..\GymScheduler.Commons\GymScheduler.Commons.csproj" />
   </ItemGroup>
 
 </Project>
